--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div id="footer">
-        <p>Perfect Design Company, CopyRight &copy; 2019, by Dion Nguyen. All right reserved</p>
+        <p>Perfect Design Company, CopyRight &copy; 2019, by Dion. All right reserved</p>
     </div>
 
 
